c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_parse/not_expression.c
int main(void) {
    return int;
}